--- a/public/frontend/index.html
+++ b/public/frontend/index.html
@@ -20,6 +20,11 @@
         <input id="telefono" placeholder="Teléfono">
         <button onclick="crearRestaurante()">Crear</button>
 
+        <h2>Buscar restaurante por ID</h2>
+        <input id="buscar-id" placeholder="ID del restaurante">
+        <button onclick="buscarRestaurantePorId()">Buscar</button>
+        <div id="resultado-busqueda" style="margin-top: 10px;"></div>
+
         <h2>Lista de restaurantes</h2>
         <table>
             <thead>
